refactor repository SpecificationBuilder and OrderBuilder